--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="2.html">기본문법</a></li>
   <li><a href="3.html">하이퍼텍스트와 속성</a></li>
   <li><a href="4.html">리스트와 태그의 중첩</a></li>
+  <li><a href="Combobox.html">콤보박스와 다중선택</a></li>
 </ol>
 </body>
 </html>
