--- a/Combobox.html
+++ b/Combobox.html
@@ -12,6 +12,8 @@
                 <option value="Black">깜장색</option>
             </select>
             <input type="submit">
+        </form>
+        <form action="http://localhost/Color2.php">
             <h1>Multiple Combobox</h1>
             <select name="Color2" multiple>
                 <option value="Red">붉은색</option>
