--- a/form_button.html
+++ b/form_button.html
@@ -6,9 +6,9 @@
     <body>
         <form action="http://localhost/form_button.php">
             <h1>Button Practice</h1>
-            <p><input type="text"></p>
-            <p><input type="submit" value="저언소옹"></p>
-            <p><input type="button" value="눌러봐"></p>
+            <p><input type="text" name="inputText" value="초기값"></p>
+            <p><input type="submit" value="저언소옹" onclick="alert('Complete')"></p>
+            <p><input type="button" value="눌러봐" onclick="alert('메롱')"></p>
             <p><input type="reset" value="지운다아아"></p>
         </form>
     </body>
