Adding form_checkbox.html and modifying files

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 </head>
 <body>
     <form action="http://localhost/login.php">
-        <p> ID <input type="text" name="ID"></p>
-        <p> PassWord <input type="password" name="Password" ></p>
-        <p> Address <input type="text" name="Address"></p>
+        <p> <label for="id_id">ID : </label><input id="id_id" type="text" name="ID"></p>
+        <p> <label>Password : <input type="password" name="Password" ></label> </p>
+        <p> <label for="id_address">Address</label> <input id="id_address" type="text" name="Address"></p>
         <p><input type="submit"></p>
     </form>
     
 <h1><a href="index.html">HTML</a></h1>
 <ol>
   <li><a href="1.html">기술소개</a></li>
-  <li><a href="Combobox.html">콤보박스와 다중선택</a></li>
+  <li><a href="form_select.html">선택과 다중선택</a></li>
   <li><a href="form_button.html">버튼 연습</a></li>
+  <li><a href="form_checkbox.html">체크박스 연습</a></li>
 </ol>
 </body>
 </html>
