--- a/form_select.html
+++ b/form_select.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <h1><a href="index.html">To index</a></h1>
         <form action="http://localhost/Color.php">
             <h1>ComboBox</h1>
             <select name="Color">
