--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-    <form action="http://localhost/login.php">
+    <form action="http://localhost/login.php" method="post">
         <p> <label for="id_id">ID : </label><input id="id_id" type="text" name="ID"></p>
         <p> <label>Password : <input type="password" name="Password" ></label> </p>
         <p> <label for="id_address">Address</label> <input id="id_address" type="text" name="Address"></p>
