--- a/form_upload.html
+++ b/form_upload.html
@@ -4,6 +4,7 @@
         <title>File Upload</title>
     </head>
     <body>
+        <h1><a href="index.html">To index</a></h1>
         <form action="http://localhost/Server/fileUpload.php" method="GET" enctype="multipart/form-data">
             <input type="file" name="profile_img">
             <input type="submit">
