--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="form_select.html">선택과 다중선택</a></li>
   <li><a href="form_button.html">버튼 연습</a></li>
   <li><a href="form_checkbox.html">체크박스 연습</a></li>
+  <li><a href="form_upload.html">파일업로드 연습</a></li>
 </ol>
 </body>
 </html>
