--- a/form_upload.html
+++ b/form_upload.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1><a href="index.html">To index</a></h1>
-        <form action="http://localhost/Server/fileUpload.php" method="GET" enctype="multipart/form-data">
+        <form action="http://localhost/fileUpload.php" method="post" enctype="multipart/form-data">
             <input type="file" name="profile_img">
             <input type="submit">
         </form>
