--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-  <title>HTML 연습</title>
+  <title>HTML Practice</title>
   <meta charset="utf-8">
 </head>
 <body>
-    <form action="http://localhost/login.php" method="post">
+    <form action="http://localhost:8081/login.php" method="post">
         <p> <label for="id_id">ID : </label><input id="id_id" type="text" name="ID"></p>
         <p> <label>Password : <input type="password" name="Password" ></label> </p>
         <p> <label for="id_address">Address</label> <input id="id_address" type="text" name="Address"></p>
         <p><input type="submit"></p>
     </form>
     
-<h1><a href="index.html">HTML</a></h1>
+<h1><a href="index.html">HTML Practice</a></h1>
 <ol>
-  <li><a href="1.html">기술소개</a></li>
-  <li><a href="form_select.html">선택과 다중선택</a></li>
-  <li><a href="form_button.html">버튼 연습</a></li>
-  <li><a href="form_checkbox.html">체크박스 연습</a></li>
-  <li><a href="form_upload.html">파일업로드 연습</a></li>
+  <li><a href="http://localhost:8081/1.html">기술소개</a></li>
+  <li><a href="http://localhost:8081/form_select.html">선택과 다중선택</a></li>
+  <li><a href="http://localhost:8081/form_button.html">버튼 연습</a></li>
+  <li><a href="http://localhost:8081/form_checkbox.html">체크박스 연습</a></li>
+  <li><a href="http://localhost:8081/form_upload.html">파일업로드 연습</a></li>
 </ol>
 </body>
 </html>
