--- a/HTML/form_select.html
+++ b/HTML/form_select.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="index.html">To index</a></h1>
+        <h1><a href="http://localhost:8081/index.html">To index</a></h1>
         <form action="http://localhost/Color.php">
             <h1>ComboBox</h1>
             <select name="Color">
