--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,13 +11,13 @@
         <p><input type="submit"></p>
     </form>
     
-<h1><a href="index.html">HTML Practice</a></h1>
+<h1><a href="index.html">HTML Practice-1</a></h1>
 <ol>
-  <li><a href="http://localhost:8081/1.html">기술소개</a></li>
-  <li><a href="http://localhost:8081/form_select.html">선택과 다중선택</a></li>
-  <li><a href="http://localhost:8081/form_button.html">버튼 연습</a></li>
-  <li><a href="http://localhost:8081/form_checkbox.html">체크박스 연습</a></li>
-  <li><a href="http://localhost:8081/form_upload.html">파일업로드 연습</a></li>
+  <li><a href="http://localhost:8080/1.html">기술소개</a></li>
+  <li><a href="http://localhost:8080/form_select.html">선택과 다중선택</a></li>
+  <li><a href="http://localhost:8080/form_button.html">버튼 연습</a></li>
+  <li><a href="http://localhost:8080/form_checkbox.html">체크박스 연습</a></li>
+  <li><a href="http://localhost:8080/form_upload.html">파일업로드 연습</a></li>
 </ol>
 </body>
 </html>
