--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
-    <form action="http://localhost:8081/login.php" method="post">
+    <form action="http://localhost:8080/login.php" method="post">
         <p> <label for="id_id">ID : </label><input id="id_id" type="text" name="ID"></p>
         <p> <label>Password : <input type="password" name="Password" ></label> </p>
         <p> <label for="id_address">Address</label> <input id="id_address" type="text" name="Address"></p>
@@ -14,11 +14,11 @@
     
 <h1><a href="index.html">HTML Practice-1</a></h1>
 <ol>
-  <li><a href="http://localhost:8080/1.html">기술소개</a></li>
-  <li><a href="http://localhost:8080/form_select.html">선택과 다중선택</a></li>
-  <li><a href="http://localhost:8080/form_button.html">버튼 연습</a></li>
-  <li><a href="http://localhost:8080/form_checkbox.html">체크박스 연습</a></li>
-  <li><a href="http://localhost:8080/form_upload.html">파일업로드 연습</a></li>
+  <li><a href="1.html">기술소개</a></li>
+  <li><a href="form_select.html">선택과 다중선택</a></li>
+  <li><a href="form_button.html">버튼 연습</a></li>
+  <li><a href="form_checkbox.html">체크박스 연습</a></li>
+  <li><a href="form_upload.html">파일업로드 연습</a></li>
 </ol>
 </body>
 </html>
