--- a/HTML/1.html
+++ b/HTML/1.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="http://localhost:8080/index.html">HTML</a></h1>
+<h1><a href="index.html">HTML</a></h1>
 <h2> 테스트 </h2>
  
 테스트 문서입니다
