--- a/HTML/form_upload.html
+++ b/HTML/form_upload.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1><a href="index.html">To index1</a></h1>
-        <form action="fileUpload.php" method="post" enctype="multipart/form-data">
+        <form action="http://localhost:8080/fileUpload.php" method="post" enctype="multipart/form-data">
             <input type="file" name="profile_img">
             <input type="submit">
         </form>
