--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,7 @@
   <li><a href="form_checkbox.html">체크박스 연습</a></li>
   <li><a href="form_upload.html">파일업로드 연습</a></li>
   <li><a href="iframe_test.html">iframe 연습</a></li>
+  <li><a href="video_test.html">Video 연습</a></li>
 </ol>
 </body>
 </html>
