Modfiy wrong words

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
 <h1>Help Site</h1>
 <ol>
   <li><a href="https://caniuse.com/">caniuse.com</a></li>
-  <li><a href="http://static.googleusercontent.com/media/www.google.com/ko//intl/ko/webmasters/docs/search-engine-optimization-starter-guide-ko.pdf">Google Search Engine search-engine-optimization-starter-guide-ko</a></li>
+  <li><a href="http://static.googleusercontent.com/media/www.google.com/ko//intl/ko/webmasters/docs/search-engine-optimization-starter-guide-ko.pdf">Google search-engine-optimization-starter-guide-ko</a></li>
   <li><a href="http://www.martinrinehart.com/frontend-engineering/engineers/html/html-tag-history.html">HTML Tag History</a></li>
   <li><a href="https://www.advancedwebranking.com/html/">HTML Tag Ranking</a></li>
 </ol>
