--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,6 +21,7 @@
   <li><a href="form_upload.html">파일업로드 연습</a></li>
   <li><a href="iframe_test.html">iframe 연습</a></li>
   <li><a href="video_test.html">Video 연습</a></li>
+  <li><a href="signup_test.html">회원가입 연습</a></li>
 </ol>
 <h1>Help Site</h1>
 <ol>
